Resolves: fdo#87189 don't draw negative canvas sizes

Change-Id: Ia52bc54084883817ffdd8ade06c3079865d52f70
(cherry picked from commit 6624484a608ed43fdeea1596f254915add671e08)